k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
      - name: orderservice
        image: __ACR_NAME__.azurecr.io/orderservice:__IMAGE_TAG__
        ports:
        - containerPort: 8080
        # Montiramo tajne kao datoteke unutar poda
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
      # Definiramo volumen koji koristi CSI driver
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kv-secret-provider"
