k8s/inventory-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventoryservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventoryservice
  template:
    metadata:
      labels:
        app: inventoryservice
    spec:
      containers:
      - name: inventoryservice
        image: __ACR_NAME__.azurecr.io/inventoryservice:__IMAGE_TAG__
        ports:
        - containerPort: 8080
        # Montiramo tajne kao datoteke unutar poda
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
      # Definiramo volumen koji koristi CSI driver
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kv-secret-provider"
