k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: orderservice-service
spec:
  type: LoadBalancer 
  selector:
    app: orderservice
  ports:
  - port: 80
    targetPort: 8080
