k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orderservice-ingress
  annotations:
    # Koristimo standardni Ingress kontroler koji dolazi s AKS-om
    kubernetes.io/ingress.class: "addon-http-application-routing"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orderservice-service
            port:
              number: 80
